--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,6 +576,7 @@ a:hover {
     overflow: hidden !important;
     max-height: 60px !important;
     white-space: nowrap !important;
+    margin-bottom: 15px;
   }
 
   .recharge-bill-paragraph p {
@@ -609,7 +610,13 @@ a:hover {
     white-space: nowrap !important;
     margin-bottom: 3px !important;
   }
-  .recharge-bill-left h2,
+  .recharge-bill-left h2 {
+    text-overflow: ellipsis !important;
+    overflow: hidden !important;
+    max-height: 65px !important;
+    white-space: nowrap !important;
+    margin-bottom: 22px !important;
+  }
   .recharge-bill-paragraph p {
     text-overflow: ellipsis !important;
     overflow: hidden !important;
@@ -949,6 +956,7 @@ a:hover {
   .recharge-bill-left h2 {
     font-size: 26px;
     margin-top: 7%;
+    margin-bottom: 15px;
   }
   .recharge-bill-left p {
     font-size: 16px;
