--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3903,7 +3903,6 @@ hr {
   box-shadow: 0px 7px 12px 0px #00000014;
   padding: 30px;
   border-radius: 0px 0px 30px 30px;
-  height: 300px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -4088,6 +4087,7 @@ hr {
   transform: translate(-50%, -50%);
   width: 34px;
   height: 34px;
+  display: flex;
 }
 .card-pos svg {
   position: absolute;
