--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2332,6 +2332,7 @@ hr {
   transition: background-color 0.3s ease;
   font-size: 16px;
   text-decoration: none;
+  margin-bottom: 15px;
 }
 
 .get-startgov-btn:hover {
