--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1812,6 +1812,7 @@ border-radius: 50%;
     right: 125px;
     z-index: 0 !important;
     margin-bottom: 60px;
+    z-index: 1 !important;
   }
   .main-image-mobile {
     position: relative;
@@ -1819,12 +1820,15 @@ border-radius: 50%;
     align-items: center;
     justify-content: center;
     display: flex;
+    padding: 40px;
   }
   .main-image-mobile img {
     align-items: center;
     justify-content: center;
     display: flex;
     width: 170px;
+    height: 340px;
+    z-index: 0 !important;
   }
 }
 /* ready-talk-online */
@@ -2332,7 +2336,6 @@ hr {
   transition: background-color 0.3s ease;
   font-size: 16px;
   text-decoration: none;
-  margin-bottom: 15px;
 }
 
 .get-startgov-btn:hover {
